--- a/geekshop/geekshop/templates/geekshop/includes/main_menu.html
+++ b/geekshop/geekshop/templates/geekshop/includes/main_menu.html
@@ -14,8 +14,7 @@
                     </a>
                 </li>
                 <li>
-                    <a class="dropdown-item" href="#">
-{#                        {% url 'orders:orders_list' %}#}
+                    <a class="dropdown-item" href="{% url 'orders:orders_list' %}">
                         Заказы
                     </a>
                 </li>
